# GlobalLightcut

./: .gitignore  CMakeLists.txt
VS12_For_Edit/: VS12_For_Edit.sln  VS12_For_Edit.vcxproj  VS12_For_Edit.vcxproj.filters
contrib/linux/lib/: libtbb.so.2  libtbbmalloc.so.2
src/: camera.cpp  camera.h  device_mesh.cpp  device_mesh.h  gl_snippets.h  host_mesh.cpp  host_mesh.h  lightcuts.cpp  lightcuts.h  main.cpp  main.h  random.h  raytracer.cpp  raytracer.h  system_context.cpp  system_context.h  types.h  utility.cpp  utility.h
